<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backlogin"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="100dp"

        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:layout_marginRight="20dp"
            android:paddingTop="10dp"
            android:layout_marginLeft="20dp"
            android:paddingBottom="30dp"
            android:paddingRight="5dp"
            android:layout_marginTop="20dp"

            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/logo"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgetPassword"
                android:textSize="20dp"
                android:layout_marginTop="5dp"
                android:textColor="#000000"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/forgetPasword"
                android:layout_marginTop="10dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:weightSum="8"
                >
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/phone"

                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutphone"
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditTextphone"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/phone"
                        android:textSize="16dp"
                        android:inputType="number"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:textColor="#000000" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/appCompatButtonRegisterservcies"
                android:layout_width="250dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:background="@drawable/backshape2"
                android:text="@string/send" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>