<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"

    >
    <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:local="http://schemas.android.com/apk/res-auto"
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layoutDirection="ltr"

        local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        local:popupTheme="@style/ThemeOverlay.AppCompat.Light" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"

            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:text="@string/orderdetail"
            android:id="@+id/toolbar_title"
            />


    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="18dp"
        android:text="@string/orderdetail"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutphone"
        android:background="@drawable/shapea"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:layout_height="110dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextphone"
            android:layout_width="match_parent"
            android:background="@null"
            android:layout_height="30dp"
            android:hint="@string/orderdetail"
            android:textSize="15dp"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/colorAccent" />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:weightSum="5"
        android:orientation="horizontal"
        >
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1.5"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="18dp"
        android:text="@string/copuon"
        />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"

            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:id="@+id/addcopoun"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/add"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="16dp"
                android:text="@string/addcopuon"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
       android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        />
    <Button
        android:id="@+id/cunti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/backkshape"
        android:text="@string/orderMandop"
        android:textColor="#ffffff"
        android:layout_marginTop="90dp"
        android:textStyle="bold" />
</LinearLayout>

    </ScrollView>
</RelativeLayout>